<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_to_cat</name>
  <version>1.0.0</version>
  <description>ROS2 demonstration from KPIT to CAT</description>
  <maintainer email="Kiran.Arsam@kpit.com">root</maintainer>
  <maintainer email="Kiran.Arsam@cat.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>demo_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
