<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>process_launcher</name>
  <version>1.0.0</version>
  <description>Cat application porting into ROS2 applications </description>
  <maintainer email="kiran.arsam@kpit.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pugixml</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
