<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pugixml</name>
  <version>1.0.0</version>
  <description>pugixml reading configuration </description>
  <maintainer email="kiran.arsam@kpit.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
